--- a/pages/program2019.html
+++ b/pages/program2019.html
@@ -28,18 +28,18 @@ slug: program2019
 <body>
 
 <h2>Program of the Federated M4IoT/MECC/DFSD/MISE Workshop</h2>
-
+<p>This is the program of the federated M4IoT/MECC/DFSD/MISE workshop.</p>
 <h4>Monday, December 9th 2019</h4>
 
 <ul>
   <li>
-    <strong>9:00 - Introduction and keynote by Nalini Venkatasubramanian</strong><br>
+    <strong>9:00 am - Introduction and keynote by Nalini Venkatasubramanian</strong><br>
     Topic: <em>Enabling Trustworthy Community Infrastructures with IoT</em><br>
     <strong>Abstract:</strong> T.b.d.
   </li>
 
   <li>
-    <strong>10:00 - Session: Fog Programming</strong>
+    <strong>9:50 am - Session: Fog Programming</strong>
     <ul>
       <li><b>A Survey on Fog Programming: Concepts, State-of-the-Art, and Research Challenges</b> (Dapeng Lan, Amir Taherkordi, Frank Eliassen and Geir Horn) <span class="gray em">DFSD</span></li>
       <li><b>ProgCEP: A Programming Model for Complex Event Processing over Fog Infrastructure</b> (Manisha Luthra and Boris Koldehofe) <span class="gray em">DFSD</span></li>
@@ -47,11 +47,11 @@ slug: program2019
   </li>
 
   <li>
-    <strong>10:30 - Coffee break</strong>
+    <strong>10:30 am - Coffee break</strong>
   </li>
 
   <li>
-    <strong>11:00 - Session: Edge Computing</strong>
+    <strong>11:00 am - Session: Edge Computing</strong>
     <ul>
       <li><b>Container Deployment Strategy for Edge Networking</b> (Walter Wong, Aleksandr Zavodovski, Pengyuan Zhou and Jussi Kangasharju) <span class="gray em">MECC</span></li>
       <li><b>Tango of Edge and Cloud Execution for Reliability</b> (Shikhar Suryavansh, Chandan Bothra, Mung Chiang, Chunyi Peng and Saurabh Bagchi) <span class="gray em">MECC</span></li>
@@ -60,11 +60,11 @@ slug: program2019
   </li>
 
   <li>
-    <strong>12:00 - Lunch break</strong>
+    <strong>12:00 pm - Lunch break</strong>
   </li>
 
   <li>
-    <strong>13:30 - Session: Middleware</strong><br>
+    <strong>1:30 pm - Session: Middleware</strong><br>
     <ul>
       <li><b>SORRIR: A Resilient Self-organizing Middleware for IoT Applications</b> (Jörg Domaschka, Christian Berger, Hans P. Reiser, Philipp Eichhammer, Frank Griesinger, Jakob Pietron, Matthias Tichy, Franz J. Hauck, Gerhard Habiger) <span class="gray em">M4IoT, short paper</span></li>
       <li><b>Semantic Description of Artificial DNA for an Organic Computing Middleware Architecture</b> (Uwe Brinkschulte, Mathias Pacher) <span class="gray em">MISE</span></li>
@@ -73,7 +73,7 @@ slug: program2019
   </li>
 
   <li>
-    <strong>14:30 - Session: Middleware</strong><br>
+    <strong>2:30 pm - Session: Middleware</strong><br>
     <ul>
       <li><b>Experience Report: Enhancing Transparency of MQTT Brokers For IoT Applications Through Provenance Streams</b> (Milan Markovic and Peter  Edwards) <span class="gray em">M4IoT, short paper</span></li>
       <li><b>Automatic Translation of Spatio-Temporal Logics to Streaming-Based Monitoring Applications for IoT-Equipped Autonomous Agents</b> (Luca Bortolussi, Vincenzo Gulisano, Eric Medvet, Dimitrios Palyvos-Giannas) <span class="gray em">M4IoT</span></li>
@@ -81,11 +81,11 @@ slug: program2019
   </li>
 
   <li>
-    <strong>15:00 - Coffee break</strong>
+    <strong>3:00 pm - Coffee break</strong>
   </li>
 
   <li>
-    <strong>15:30 - Session: Software Engineering for IoT</strong>
+    <strong>3:30 pm - Session: Software Engineering for IoT</strong>
     <ul>
       <li><b>Untangling the physical-digital knot when designing advanced IoT ecosystems</b> (Ilse Bohé, Michiel Willocx, Vincent Naessens) <span class="gray em">M4IoT</span></li>
       <li><b>A Development Environment for FIWARE-based Internet of Things Applications</b> (Lucas Dantas, Everton Cavalcante, Thais Batista) <span class="gray em">M4IoT</span></li>
@@ -93,7 +93,7 @@ slug: program2019
   </li>
 
   <li>
-    <strong>16:15 - Discussion and Wrap-Up</strong>
+    <strong>4:10 pm - Discussion and Wrap-Up</strong>
   </li>
 </ul>
 
