--- a/index.html
+++ b/index.html
@@ -215,7 +215,30 @@
                 <li>David Eyers <span class="location">University of Otago, New Zealand</span></li>
             </ul>
             <h3>Program Committee</h3>
-            TBD
+            <ul>
+				<li>Rossana Andrade <span class="location">Federal University of Ceará, Brazil</span></li>
+				<li>Jean-Paul Arcangeli <span class="location">University of Toulouse III - Paul Sabatier</span></li>
+				<li>Thais Batista <span class="location">Federal University of Rio Grandde do Norte, Brazil</span></li>
+				<li>Sophie Chabridon <span class="location">Télécom SudParis/Institute Polytechnique de Paris, France</span></li>
+				<li>Abhishek Chandra <span class="location">University of Minnesota, USA</span></li>
+				<li>Denis Conan <span class="location">Télécom SudParis/Institute Polytechnique de Paris, France</span></li>
+				<li>Thierry Coupaye <span class="location">Orange Labs, France</span></li>
+				<li>Flávia Delicato <span class="location">Federal Fluminense University, Brazil</span></li>
+				<li>Vincenzo de Maio <span class="location">Vienna University of Technology, Austria</span></li>
+				<li>Abhishek Dubey <span class="location">Vanderbilt University, USA</span></li>
+				<li>Paul Grace <span class="location">Aston University, United Kingdom</span></li>
+				<li>Romain Laborde <span class="location">University of Toulouse III - Paul Sabatier</span></li>
+				<li>Kevin Lee <span class="location">Deakin University, Australia</span></li>
+				<li>Ken Moody <span class="location">University of Cambridge, United Kingdom</span></li>
+				<li>Frank Pallas <span class="location">Berlin University of Technology</span></li>
+				<li>Thomas Pasquier <span class="location">University of Bristol, United Kingdom</span></li>
+				<li>Davy Preuveneers <span class="location">Catholic University of Leuven, Belgium</span></li>
+				<li>Philippe Roose <span class="location">University of Pau and Pays de l'Adour, France</span></li>
+				<li>Douglas Schmidt <span class="location">Vanderbilt University, USA</span></li>
+				<li>Chantal Taconet <span class="location">Télécom SudParis/Institute Polytechnique de Paris, France</span></li>
+ 				<li>Jó Ueyama <span class="location">University of São Paulo, Brazil</span></li>
+				<li>Shigeng Zhang <span class="location">Central South University, China</span></li>
+			</ul>
 			
             <p style="margin-top: 50px">Contact us at <a href="mailto:m4iot@mcc.tu-berlin.de">m4iot@mcc.tu-berlin.de</a></p>
             <div class="row">
@@ -224,6 +247,7 @@
                 </a>
             </div>
 			
+			<!--
             <a class="twitter-timeline" data-lang="en" data-height="500" href="https://twitter.com/M4IoT">Tweets by M4IoT</a> 
             <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
             <div class="row">
@@ -231,6 +255,7 @@
                     <div class="arrow-up"></div>
                 </a>
             </div>
+			-->
 			
             <p class="gray center">
 				<small>M4IoT &copy; 2014-2020 | All rights reserved.</small>
