--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
             <h1 id="organization">Organization</h1>
             <h3>Workshop Co-chairs</h3>
             <ul>
-                <li>David Bermbach <span class="location">TU Berlin, Germany</span></li>
+                <li>David Bermbach <span class="location">Berlin University of Technology, Germany</span></li>
                 <li>Everton Cavalcante <span class="location">Federal University of Rio Grande do Norte, Brazil</span> </li>
-                <li>Stéphane Delbruel <span class="location">Leuven University, Belgium</span></li>
+                <li>Stéphane Delbruel <span class="location">Catholic University of Leuven, Belgium</span></li>
                 <li>David Eyers <span class="location">University of Otago, New Zealand</span></li>
             </ul>
             <h3>Program Committee</h3>
@@ -230,7 +230,7 @@
 				<li>Romain Laborde <span class="location">University of Toulouse III - Paul Sabatier</span></li>
 				<li>Kevin Lee <span class="location">Deakin University, Australia</span></li>
 				<li>Ken Moody <span class="location">University of Cambridge, United Kingdom</span></li>
-				<li>Frank Pallas <span class="location">Berlin University of Technology</span></li>
+				<li>Frank Pallas <span class="location">Berlin University of Technology, Germany</span></li>
 				<li>Thomas Pasquier <span class="location">University of Bristol, United Kingdom</span></li>
 				<li>Davy Preuveneers <span class="location">Catholic University of Leuven, Belgium</span></li>
 				<li>Philippe Roose <span class="location">University of Pau and Pays de l'Adour, France</span></li>
