--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <h3>Program Committee</h3>
             <ul>
 				<li>Rossana Andrade <span class="location">Federal University of Ceará, Brazil</span></li>
-				<li>Jean-Paul Arcangeli <span class="location">University of Toulouse III - Paul Sabatier</span></li>
+				<li>Jean-Paul Arcangeli <span class="location">University of Toulouse III - Paul Sabatier, France</span></li>
 				<li>Thais Batista <span class="location">Federal University of Rio Grandde do Norte, Brazil</span></li>
 				<li>Sophie Chabridon <span class="location">Télécom SudParis/Institute Polytechnique de Paris, France</span></li>
 				<li>Abhishek Chandra <span class="location">University of Minnesota, USA</span></li>
@@ -227,7 +227,7 @@
 				<li>Vincenzo de Maio <span class="location">Vienna University of Technology, Austria</span></li>
 				<li>Abhishek Dubey <span class="location">Vanderbilt University, USA</span></li>
 				<li>Paul Grace <span class="location">Aston University, United Kingdom</span></li>
-				<li>Romain Laborde <span class="location">University of Toulouse III - Paul Sabatier</span></li>
+				<li>Romain Laborde <span class="location">University of Toulouse III - Paul Sabatier, France</span></li>
 				<li>Kevin Lee <span class="location">Deakin University, Australia</span></li>
 				<li>Ken Moody <span class="location">University of Cambridge, United Kingdom</span></li>
 				<li>Frank Pallas <span class="location">Berlin University of Technology, Germany</span></li>
