--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <table class="dates">
                 <tr>
                     <td>Paper submission deadline:</td>
-                    <td><strong>September 2, 2020<br/>(AoE, GMT-12)</strong></td>
+                    <td><strong>extended to September 9, 2020<br/>(AoE, GMT-12)</strong></td>
                 </tr>
                 <tr>
                     <td>Author notification:</td>
