Adding accepted papers

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <div id="top-of-page"></div>
         <nav>
             <ul>
-                <li><a href="#program">Program</a></li>
+                <li><a href="#papers">Accepted Papers</a></li>
                 <li><a href="#cfp">Call for Papers</a></li>
                 <li><a href="#submissions">Submissions</a></li>
-                <li><a href="#dates-location">Important Dates</a></li>
+                <li><a href="#dates-location">Dates</a></li>
                 <li><a href="#organization">Organization</a></li>
             </ul>
         </nav>
@@ -33,7 +33,7 @@
             <p style="font-size: 0.75rem;">
                 The 7th International Workshop on Middleware and Applications for the Internet of Things
                 <br />
-                (At the <a href="http://2020.middleware-conference.org/" target="_blank">21th ACM/IFIP International Middleware Conference</a> in Delft, The Netherlands) 
+                (At the <a href="http://2020.middleware-conference.org/" target="_blank">21th ACM/IFIP International Middleware Conference</a>, online) 
             </p>
         </div>
         <div class="container">
@@ -84,8 +84,23 @@
                 </a>
             </div>
 			
-            <h1 id="program">Program</h1>
-            <p>TBD</p>
+            <h1 id="papers">Accepted Papers</h1>
+            <p>
+				<ul>
+					<li>
+						On a Caching System with Object Sharing<br/>
+						<span class="location">Nader Alfares, George Kesidis, Xi Li, Bhuvan Urgaonkar, Mahmut Kandemir (Penn State University, USA), and Takis Konstantopoulos (University of Liverpool, United Kingdom)</span>
+					</li>
+					<li>
+						IoT-based Garbage Collecting Management System for Smart Cities<br/>
+						<span class="location">Wanderson Ricardo de Medeiros and Gustavo Girão (Federal University of Rio Grande do Norte, Brazil)</span>
+					</li>
+					<li>
+						A Study of Publish/Subscribe Middleware Under Different IoT Traffic Conditions<br/>
+						<span class="location">Zhuangwei Kang, Robert Canady, Abhishek Dubey, Aniruddha Gokhale (Vanderbilt University, USA), Shashank Shekhar, and Matous Sedlacek (Siemens Technology, Germany)</span>
+					</li>
+				</ul>
+			</p>
             <div class="row">
                 <a href="#top-of-page" class="btn-up">
                     <div class="arrow-up"></div>
