Preparing the 2021 edition website

--- a/pages/2020.html
+++ b/pages/2020.html
@@ -31,22 +31,16 @@
         <div class="logo">
             <img src="img/logo20.png" alt="M4IoT logo" style="width:100%;" />
             <p style="font-size: 0.75rem;">
-                8th International Workshop on Middleware and Applications for the Internet of Things
+                The 7th International Workshop on Middleware and Applications for the Internet of Things
                 <br />
-                (at the <a href="https://middleware-conf.github.io/2021/" target="_blank">22nd ACM/IFIP International Middleware Conference</a>, online) 
+                (At the <a href="http://2020.middleware-conference.org/" target="_blank">21th ACM/IFIP International Middleware Conference</a>, online) 
             </p>
         </div>
         <div class="container">
             <h1 id="welcome">Welcome</h1>
-            <p>Following the successful <a href="/2020" target="_blank">2020 edition</a> of the Workshop on Middleware and Applications for the Internet of Things, we are happy to announce the 2021 edition. We are looking forward your submissions!</p>
+            <p>Following the successful <a href="/2019" target="_blank">2019 edition</a> of the Workshop on Middleware and Applications for the Internet of Things, we are happy to announce the 2020 edition. We are looking forward your submissions!</p>
             <h3>Past editions of M4IoT</h3>
             <ul>
-				<li>
-                    <a href="http://www.m4iot.org/2020/" target="_blank">
-                    7th Workshop on Middleware and Applications for the Internet of Things (M4IoT 2020)
-                    </a><span class="location">On-line</span> 
-                    (<a href="https://dl.acm.org/doi/proceedings/10.1145/3429881" target="_blank">Proceedings</a>)
-                </li>
                 <li>
                     <a href="http://www.m4iot.org/2019/" target="_blank">
                     6th Workshop on Middleware and Applications for the Internet of Things (M4IoT 2019)
@@ -90,7 +84,6 @@
                 </a>
             </div>
 			
-			<!--
             <h1 id="papers">Accepted Papers</h1>
             <p>
 				<ul>
@@ -113,7 +106,6 @@
                     <div class="arrow-up"></div>
                 </a>
             </div>
-			-->
 			
             <h1 id="cfp">Scope</h1>
             <p>
@@ -181,7 +173,7 @@
             </div>
 			
             <h1 id="submissions">Paper Submission and Publication</h1>
-            <p> M4IoT 2021 seeks two kinds of paper submissions: </p>
+            <p> M4IoT 2020 seeks two kinds of paper submissions: </p>
             <ul>
                 <li>
 					<strong>Regular research papers (up to 6 pages)</strong> describing original, substantial contributions in research and/or practice 
@@ -195,10 +187,10 @@
 				Along with the paper, authors are encouraged to submit additional material (e.g., a link to a YouTube video) on a separate page which will not be published as part of the proceedings. All papers should follow the <a href="http://www.acm.org/publications/proceedings-template" target="_blank">ACM Standard Proceedings Template</a> for formatting and be submitted in PDF format via the <a href="https://m4iot2020.hotcrp.com/" target="_blank">HotCRP submission system</a>.
             </p>
             <p>
-				All submitted papers should describe original work and not be published or under review anywhere. The papers will be judged on the basis of their clarity, relevance, originality, and contribution. All accepted and presented papers will appear at the M4IoT 2020 Proceedings, which will be available at the ACM Digital Library. Proceedings of previous editions of the M4IoT workshop are available <a href="http://bit.ly/m4iot-proceedings" target="_blank">here</a>.
+				All submitted papers should describe original work and not be published or under review anywhere. The papers will be judged on the basis of their clarity, relevance, originality, and contribution. All accepted and presented papers will appear at the M4IoT 2020 Proceedings, which will be available at the ACM Digital Library. Proceedings of previous editions of the M4IoT workshop are available <a href="https://bit.ly/m4iot-acm" target="_blank">here</a>.
             </p>
 			<p>
-				<strong>Important:</strong> Due to the COVID-19 situation, Middleware 2021 and M4IoT 2021 will be held virtually. Nonetheless, all accepted papers will be published at the ACM Digital Library.
+				<strong>Important:</strong> The COVID-19 situation is being closely monitored. Following the lead of Middleware 2020, all accepted papers will be published. The workshop itself may either run as an in-person event in Delft or as a virtual event.
             </p>
             <div class="row">
                 <a href="#top-of-page" class="btn-up">
@@ -206,22 +198,23 @@
                 </a>
             </div>
 			
-            <h1 id="dates-location">Important Dates</h1>
+            <h1 id="dates-location">Important Dates &amp; Location</h1>
             <table class="dates">
                 <tr>
                     <td>Paper submission deadline:</td>
-                    <td><strong>extended to September 9, 2021<br/>(AoE, GMT-12)</strong></td>
+                    <td><strong>extended to September 9, 2020<br/>(AoE, GMT-12)</strong></td>
                 </tr>
                 <tr>
                     <td>Author notification:</td>
-                    <td><strong>September 28, 2021</strong></td>
+                    <td><strong>September 28, 2020</strong></td>
                 </tr>
                 <tr>
                     <td>Camera-ready copies: </td>
-                    <td><strong>October 16, 2021</strong></td>
+                    <td><strong>October 16, 2020</strong></td>
                 </tr>
             </table>
 			<br />
+            <p>M4IoT 2020 is co-located with the <a href="http://2020.middleware-conference.org/" target="_blank">21th ACM/IFIP International Middleware Conference</a> in Delft, The Netherlands. </p>
             <div class="row">
                 <a href="#top-of-page" class="btn-up">
                     <div class="arrow-up"></div>
@@ -238,8 +231,6 @@
             </ul>
             <h3>Program Committee</h3>
             <ul>
-				<li>Under formation</li>
-				<!--
 				<li>Rossana Andrade <span class="location">Federal University of Ceará, Brazil</span></li>
 				<li>Jean-Paul Arcangeli <span class="location">University of Toulouse III - Paul Sabatier, France</span></li>
 				<li>Thais Batista <span class="location">Federal University of Rio Grandde do Norte, Brazil</span></li>
@@ -262,7 +253,6 @@
 				<li>Chantal Taconet <span class="location">Télécom SudParis/Institute Polytechnique de Paris, France</span></li>
  				<li>Jó Ueyama <span class="location">University of São Paulo, Brazil</span></li>
 				<li>Shigeng Zhang <span class="location">Central South University, China</span></li>
-				-->
 			</ul>
 			
             <p style="margin-top: 50px">Contact us at <a href="mailto:m4iot@mcc.tu-berlin.de">m4iot@mcc.tu-berlin.de</a></p>
@@ -283,7 +273,7 @@
 			-->
 			
             <p class="gray center">
-				<small>M4IoT &copy; 2014-2021 | All rights reserved.</small>
+				<small>M4IoT &copy; 2014-2020 | All rights reserved.</small>
 			</p>
             <script>
                 (function(i, s, o, g, r, a, m) {
