--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>M4IoT 2020 - The 7th International Workshop on Middleware and Applications for the Internet of Things</title>
+        <title>M4IoT 2021 - 8th International Workshop on Middleware and Applications for the Internet of Things</title>
         <meta charset="UTF-8" />
         <meta property="og:title" content="M4IoT - Workshop on Middleware and Applications for the Internet of Things" />
         <meta property="og:type" content="website" />
@@ -21,7 +21,7 @@
         <div id="top-of-page"></div>
         <nav>
             <ul>
-                <li><a href="#papers">Accepted Papers</a></li>
+                <li><a href="#">Accepted Papers</a></li>
                 <li><a href="#cfp">Call for Papers</a></li>
                 <li><a href="#submissions">Submissions</a></li>
                 <li><a href="#dates-location">Dates</a></li>
