Updating 2021 edition's website

--- a/index.html
+++ b/index.html
@@ -29,59 +29,52 @@
             </ul>
         </nav>
         <div class="logo">
-            <img src="img/logo20.png" alt="M4IoT logo" style="width:100%;" />
+            <img src="img/logo21.png" alt="M4IoT logo" style="width:100%;" />
             <p style="font-size: 0.75rem;">
-                8th International Workshop on Middleware and Applications for the Internet of Things
+                <span style="font-size: 14px; font-weight: bold">8th International Workshop on Middleware and Applications for the Internet of Things</span>
                 <br />
-                (at the <a href="https://middleware-conf.github.io/2021/" target="_blank">22nd ACM/IFIP International Middleware Conference</a>, online) 
+                at the <a href="https://middleware-conf.github.io/2021/" target="_blank">22nd ACM/IFIP International Middleware Conference</a> &nbsp;|&nbsp; December 6-10, 2021 - Online
             </p>
         </div>
         <div class="container">
             <h1 id="welcome">Welcome</h1>
-            <p>Following the successful <a href="/2020" target="_blank">2020 edition</a> of the Workshop on Middleware and Applications for the Internet of Things, we are happy to announce the 2021 edition. We are looking forward your submissions!</p>
+            <p>Following the successful <a href="/2020" target="_blank">2020 edition</a> of the Workshop on Middleware and Applications for the Internet of Things, we are happy to announce the 2021 edition. We look forward to your submissions!</p>
             <h3>Past editions of M4IoT</h3>
             <ul>
 				<li>
-                    <a href="http://www.m4iot.org/2020/" target="_blank">
                     7th Workshop on Middleware and Applications for the Internet of Things (M4IoT 2020)
-                    </a><span class="location">On-line</span> 
-                    (<a href="https://dl.acm.org/doi/proceedings/10.1145/3429881" target="_blank">Proceedings</a>)
+                    <span class="location">On-line</span><br/>
+                    <a href="https://dl.acm.org/doi/proceedings/10.1145/3429881" target="_blank">Proceedings</a>
                 </li>
                 <li>
-                    <a href="http://www.m4iot.org/2019/" target="_blank">
                     6th Workshop on Middleware and Applications for the Internet of Things (M4IoT 2019)
-                    </a><span class="location">Davis, California, USA</span> 
-                    (<a href="https://dl.acm.org/doi/proceedings/10.1145/3366610" target="_blank">Proceedings</a>)
+					<span class="location">Davis, California, USA</span><br/>
+                    <a href="https://dl.acm.org/doi/proceedings/10.1145/3366610" target="_blank">Proceedings</a>
                 </li>
                 <li>
-                    <a href="http://www.m4iot.org/2018/" target="_blank">
                     5th Workshop on Middleware and Applications for the Internet of Things (M4IoT 2018)
-                    </a><span class="location">Rennes, France</span> 
-                    (<a href="https://dl.acm.org/doi/proceedings/10.1145/3286719" target="_blank">Proceedings</a>)
+                    <span class="location">Rennes, France</span><br/>
+                    <a href="https://dl.acm.org/doi/proceedings/10.1145/3286719" target="_blank">Proceedings</a>
                 </li>
                 <li>
-                    <a href="http://www.m4iot.org/2017/" target="_blank">
                     4th Workshop on Middleware and Applications for the Internet of Things (M4IoT 2017)
-                    </a> <span class="location">Las Vegas, Nevada, USA</span> 
-                    (<a href="https://dl.acm.org/doi/proceedings/10.1145/3152141" target="_blank">Proceedings</a>)
+                    <span class="location">Las Vegas, Nevada, USA</span><br/>
+                    <a href="https://dl.acm.org/doi/proceedings/10.1145/3152141" target="_blank">Proceedings</a>
                 </li>
                 <li>
-                    <a href="http://www.lii.enac.fr/event/m4iot16/" target="_blank">
                     3rd Workshop on Middleware for Context-Aware Applications in the IoT (M4IoT 2016)
-                    </a> <span class="location">Trento, Italy</span> 
-                    (<a href="https://dl.acm.org/doi/proceedings/10.1145/3008631" target="_blank">Proceedings</a>)
+                    <span class="location">Trento, Italy</span><br/>
+                    <a href="https://dl.acm.org/doi/proceedings/10.1145/3008631" target="_blank">Proceedings</a>
                 </li>
                 <li>
-                    <a href="http://www.lii.enac.fr/event/m4iot15/" target="_blank">
                     2nd Workshop on Middleware for Context-Aware Applications in the IoT (M4IoT 2015)
-                    </a> <span class="location">Vancouver, British Columbia, Canada</span> 
-                    (<a href="https://dl.acm.org/doi/proceedings/10.1145/2836127" target="_blank">Proceedings</a>)
+                    <span class="location">Vancouver, British Columbia, Canada</span><br/>
+                    <a href="https://dl.acm.org/doi/proceedings/10.1145/2836127" target="_blank">Proceedings</a>
                 </li>
                 <li>
-                    <a href="http://www.lii.enac.fr/event/m4iot14/" target="_blank">
                     1st Workshop on Middleware for Context-Aware Applications in the IoT (M4IoT 2014)
-                    </a> <span class="location">Bordeaux, France</span> 
-                    (<a href="https://dl.acm.org/doi/proceedings/10.1145/2676743" target="_blank">Proceedings</a>)
+                    <span class="location">Bordeaux, France</span><br/>
+                    <a href="https://dl.acm.org/doi/proceedings/10.1145/2676743" target="_blank">Proceedings</a>
                 </li>
             </ul>
             <div class="row">
@@ -117,7 +110,7 @@
 			
             <h1 id="cfp">Scope</h1>
             <p>
-				The Internet of Things (IoT) is creating new services and applications across various domains, including smart electricity grids, intelligent transportation, healthcare, smart homes, and energy management. As a consequence, a complex ecosystem of interconnected applications, services, and physical/virtual devices, with a high degree of heterogeneity, emerges. Such a heterogeneity can be addressed by middleware platforms to abstract away the specificities of these devices, promote interoperability among them, and leverage the development of services and applications. In this ecosystem, enabled by middleware, devices share contextual data or receive control commands; services consume, process, and/or provide data; and applications leverage services and devices to fulfill users’ needs.
+				The Internet of Things (IoT) is creating new services and applications across various domains, including smart electricity grids, intelligent transportation, healthcare, smart homes, and energy management. As a consequence, a complex ecosystem of interconnected applications, services, and physical/virtual devices, with a high degree of heterogeneity, emerges. Such heterogeneity can be addressed by middleware platforms to abstract away the specificities of these devices, promote interoperability among them, and leverage the development of services and applications. In this ecosystem, enabled by middleware, devices share contextual data or receive control commands; services consume, process, and/or provide data; and applications leverage services and devices to fulfill users’ needs.
 			</p>
             <p>
 				This workshop focuses on two fundamental components in such ecosystems, namely (i) the middleware to compose applications, services, and devices and (ii) the applications built atop such middleware. Central topics of interest include the design, implementation, and operation of these components and how they process data and communicate with each other.
@@ -126,53 +119,11 @@
 			<h1 id="topics">Topics of Interest</h1>
             <p><strong>Specific topics of interest include, but are not limited to:</strong></p>
             <ul>
-                <li>
-                    Abstractions and API composition for IoT applications
-                    <ul>
-                        <li>Design and specification of views, abstractions, and APIs for IoT applications, sensors, and devices</li>
-                        <li>Middleware concepts enabling end-users to interconnect devices and applications</li>
-                        <li>Architectural concerns for building IoT applications</li>
-                        <li>Integration of IoT devices with cloud and edge resources as well as ensuing interaction patterns</li>
-                        <li>Composition and interoperability of IoT services</li>
-                    </ul>
-                </li>
-                <li>
-                    Software Engineering for IoT applications
-                    <ul>
-                        <li>Development methodologies, tools, and experience</li>
-                        <li>Speed of prototyping and ease of deployment of user-programmable content</li>
-                    </ul>
-                </li>
-                <li>
-                    Services and infrastructure for IoT applications
-                    <ul>
-                        <li>Cloud-, edge-, fog-, and mobile cloud-based services for IoT</li>
-                        <li>Data management for IoT (storage and analytics)</li>
-                        <li>Design of IoT platforms and experience of using IoT platforms </li>
-                        <li>Distribution of services and applications over sensors, mobile devices, edge, fog, and cloud resources 
-                        </li>
-                        <li>Semantic Web services for IoT</li>
-                        <li>Discovery and capability matching services</li>
-                        <li>Simulated IoT infrastructure and testbeds</li>
-                    </ul>
-                </li>
-                <li>
-                    Processing paradigms and services
-                    <ul>
-                        <li>Stream processing and distributed event-based systems</li>
-                        <li>Complex event processing for IoT</li>
-                        <li>Intelligent data transformation services</li>
-                    </ul>
-                </li>
-                <li>
-                    Quality aspects
-                    <ul>
-                        <li>Security and privacy</li>
-                        <li>Quality of Context capabilities</li>
-                        <li>System-wide quality concerns such as performance, availability, and dependability</li>
-						<li>Energy-awareness and Green IoT</li>
-                    </ul>
-                </li>
+                <li>Abstractions and API composition for IoT applications, including middleware concepts enabling end-users to interconnect devices and applications</li>
+                <li>IoT application development issues, including methodologies, tools, and experience</li>
+                <li>Services and infrastructure for IoT applications, e.g., cloud-, edge-, fog-, and mobile cloud-based services for IoT, data management (storage and analytics), design and experience of IoT platforms, semantic Web services, and discovery services</li>
+                <li>Processing paradigms and services</li>
+                <li>Quality aspects, e.g., security, privacy, Quality of Context, performance, availability, and dependability</li>
             </ul>
             <div class="row">
                 <a href="#top-of-page" class="btn-up">
@@ -184,18 +135,17 @@
             <p> M4IoT 2021 seeks two kinds of paper submissions: </p>
             <ul>
                 <li>
-					<strong>Regular research papers (up to 6 pages)</strong> describing original, substantial contributions in research and/or practice 
+					<strong>Regular research papers (up to 6 pages)</strong> describing original, substantial contributions in research and/or practice
                 </li>
                 <li>
 					<strong>Position papers and experience reports (up to 4 pages)</strong> describing emerging results, lessons learned, and open problems from concrete applications or novel ideas and perspectives on research
                 </li>
             </ul>
             <p>
-				The page limits include abstract, all figures, tables, and references.<br />
-				Along with the paper, authors are encouraged to submit additional material (e.g., a link to a YouTube video) on a separate page which will not be published as part of the proceedings. All papers should follow the <a href="http://www.acm.org/publications/proceedings-template" target="_blank">ACM Standard Proceedings Template</a> for formatting and be submitted in PDF format via the <a href="https://m4iot2020.hotcrp.com/" target="_blank">HotCRP submission system</a>.
+				All submissions must be in Adobe Portable Document Format (PDF) and must comply with the ACM 2-column conference format (<code>ACM_SigConf</code>) available at this <a href="http://www.acm.org/publications/proceedings-template" target="_blank">link</a>. LaTeX users must use the <code>acmart.cls</code> class provided in the template with the conference format enabled at the document preamble: <pre>\documentclass[sigconf]{acmart}</pre>Authors must use the <code>ACM-Reference-Format.bst</code> bibliography style also provided in the template:<pre>\bibliographystyle{ACM-Reference-Format}</pre>Submissions must be no longer than 10 pages, including all figures, tables, and and references. Papers must be electronically submitted through the <a href="https://m4iot21.hotcrp.com" target="_blank">HotCRP</a> system.
             </p>
             <p>
-				All submitted papers should describe original work and not be published or under review anywhere. The papers will be judged on the basis of their clarity, relevance, originality, and contribution. All accepted and presented papers will appear at the M4IoT 2020 Proceedings, which will be available at the ACM Digital Library. Proceedings of previous editions of the M4IoT workshop are available <a href="http://bit.ly/m4iot-proceedings" target="_blank">here</a>.
+				All submitted papers should describe original work and not be published or under review anywhere. The papers will be judged on the basis of their clarity, relevance, originality, and contribution. At least one author of each accepted paper must register at Middleware 2021 and present the paper during the workshop, otherwise the paper will not be included in the proceedings. Proceedings of previous editions of the M4IoT workshop are available <a href="http://bit.ly/m4iot-proceedings" target="_blank">here</a>.
             </p>
 			<p>
 				<strong>Important:</strong> Due to the COVID-19 situation, Middleware 2021 and M4IoT 2021 will be held virtually. Nonetheless, all accepted papers will be published at the ACM Digital Library.
@@ -210,15 +160,15 @@
             <table class="dates">
                 <tr>
                     <td>Paper submission deadline:</td>
-                    <td><strong>extended to September 9, 2021<br/>(AoE, GMT-12)</strong></td>
+                    <td><strong>September 2, 2021<br/>(AoE, GMT-12)</strong></td>
                 </tr>
                 <tr>
                     <td>Author notification:</td>
-                    <td><strong>September 28, 2021</strong></td>
+                    <td><strong>September 27, 2021</strong></td>
                 </tr>
                 <tr>
                     <td>Camera-ready copies: </td>
-                    <td><strong>October 16, 2021</strong></td>
+                    <td><strong>October 15, 2021</strong></td>
                 </tr>
             </table>
 			<br />
