--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="container">
             <h1 id="welcome">Welcome</h1>
-            <p>Following the successful <a href="/2020" target="_blank">2020 edition</a> of the Workshop on Middleware and Applications for the Internet of Things, we are happy to announce the 2021 edition. We look forward to your submissions!</p>
+            <p>Following the successful 2020 edition of the Workshop on Middleware and Applications for the Internet of Things, we are happy to announce M4IoT 2021. We look forward to your submissions!</p>
             <h3>Past editions of M4IoT</h3>
             <ul>
 				<li>
