--- a/index.html
+++ b/index.html
@@ -112,12 +112,11 @@
             <p>
 				The Internet of Things (IoT) is creating new services and applications across various domains, including smart electricity grids, intelligent transportation, healthcare, smart homes, and energy management. As a consequence, a complex ecosystem of interconnected applications, services, and physical/virtual devices, with a high degree of heterogeneity, emerges. Such heterogeneity can be addressed by middleware platforms to abstract away the specificities of these devices, promote interoperability among them, and leverage the development of services and applications. In this ecosystem, enabled by middleware, devices share contextual data or receive control commands; services consume, process, and/or provide data; and applications leverage services and devices to fulfill users’ needs.
 			</p>
-            <p>
-				This workshop focuses on two fundamental components in such ecosystems, namely (i) the middleware to compose applications, services, and devices and (ii) the applications built atop such middleware. Central topics of interest include the design, implementation, and operation of these components and how they process data and communicate with each other.
-			</p>
 			
 			<h1 id="topics">Topics of Interest</h1>
-            <p><strong>Specific topics of interest include, but are not limited to:</strong></p>
+			<p>
+				This workshop focuses on two fundamental components in such ecosystems, namely (i) the middleware to compose applications, services, and devices and (ii) the applications built atop such middleware. Central topics of interest include the design, implementation, and operation of these components and how they process data and communicate with each other. <strong>Specific topics of interest include, but are not limited to:</strong>
+			</p>
             <ul>
                 <li>Abstractions and API composition for IoT applications, including middleware concepts enabling end-users to interconnect devices and applications</li>
                 <li>IoT application development issues, including methodologies, tools, and experience</li>
