--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 			
 			<h1 id="topics">Topics of Interest</h1>
 			<p>
-				This workshop focuses on two fundamental components in such ecosystems, namely (i) the middleware to compose applications, services, and devices and (ii) the applications built atop such middleware. Central topics of interest include the design, implementation, and operation of these components and how they process data and communicate with each other. <strong>Specific topics of interest include, but are not limited to:</strong>
+				M4IoT 2021 focuses on two fundamental components in such ecosystems, namely (i) the middleware to compose applications, services, and devices and (ii) the applications built atop such middleware. Central topics of interest include the design, implementation, and operation of these components and how they process data and communicate with each other. <strong>Specific topics of interest include, but are not limited to:</strong>
 			</p>
             <ul>
                 <li>Abstractions and API composition for IoT applications, including middleware concepts enabling end-users to interconnect devices and applications</li>
